fix: only show configured endpoint in observability view
getCurrentStatus() was returning ALL rows from the llm_status table,
including stale entries from previous endpoint configurations. Now:
- Only returns the endpoint set in app.observability.endpoint
- Automatically cleans up stale entries for other endpoints
- Returns empty list when no endpoint is configured